Sync saved GPS points to Supabase